// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component should render with all the props given 1`] = `
<div>
  <div
    class="sc-eCssSg hmMryX"
    id="nav"
  >
    <div
      class="sc-hKgILt bzTnQc"
    >
      <div
        class="sc-gsTCUz jTqHgL links"
      >
        <a
          class="sc-gKsewC gpmffZ"
          href="#"
        >
          <span
            class="sc-jSgupP chjmVk"
          >
            Home
          </span>
        </a>
        <a
          class="sc-gKsewC gpmffZ"
          href="#"
        >
          <span
            class="sc-jSgupP chjmVk"
          >
            About Us
          </span>
        </a>
        <a
          class="sc-gKsewC gpmffZ"
          href="#"
        >
          <span
            class="sc-jSgupP chjmVk"
          >
            Articles
          </span>
        </a>
        <a
          class="sc-gKsewC gpmffZ"
          href="#"
        >
          <span
            class="sc-jSgupP chjmVk"
          >
            Contact
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    class="sc-dlfnbm iwVWCV"
  >
    <a
      class="open"
      href="#nav"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars fa-w-14 "
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          fill="currentColor"
        />
      </svg>
      <span>
        Menu
      </span>
    </a>
    <a
      class="close"
      href="#"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
        />
      </svg>
      <span>
        Close
      </span>
    </a>
  </div>
</div>
`;

exports[`Sidebar component should render with default theme 1`] = `
<div>
  <div
    class="sc-eCssSg hmMryX"
    id="nav"
  >
    <div
      class="sc-hKgILt bzTnQc"
    >
      <div
        class="sc-gsTCUz jTqHgL links"
      />
    </div>
  </div>
  <div
    class="sc-dlfnbm iwVWCV"
  >
    <a
      class="open"
      href="#nav"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars fa-w-14 "
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          fill="currentColor"
        />
      </svg>
      <span>
        Menu
      </span>
    </a>
    <a
      class="close"
      href="#"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
        />
      </svg>
      <span>
        Close
      </span>
    </a>
  </div>
</div>
`;
